--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -751,7 +751,7 @@
 
         async function validateApiKey(apiKey) {
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=${apiKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -784,7 +784,7 @@
                 '4. 詞性鍵請使用英文縮寫 (n., adj., v., adv., pron., prep., conj., interj., phr., 等)\n' +
                 'JSON 格式: {"word":"","pronunciation":"","translation":{"pos":"中文"},"definition":{"pos":"English definition"},"example_sentence":{"pos":"English sentence"}}';
 
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`, {
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=${apiKey}`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
